Remove files and Read me for mhui.

--- a/MhiuDataset.ipynb
+++ b/MhiuDataset.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "It generates the dataset for mhui\n",
+    "You need all data in the:\n",
+    "    ./data/mhui/images\n",
+    "    ./data/mhui/groundtruth\n",
+    "It will crop the white parts and put the files in\n",
+    "    ./data/mhui/cropped/images\n",
+    "    ./data/mhui/cropped/groundtruth\n",
+    "It will create the patches in:\n",
+    "    ./data/mhui/generate/patches_rotation/images/\n",
+    "    ./data/mhui/generate/patches_rotation/groundtruth/\n",
+    "It will calculate the distances\n",
+    "    ./data/mhui/generate/patches_rotation/distance/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "metadata": {
     "collapsed": true
