Add progress bars.

--- a/MhiuDataset.ipynb
+++ b/MhiuDataset.ipynb
@@ -8,23 +8,23 @@
    },
    "outputs": [],
    "source": [
-    "It generates the dataset for mhui\n",
-    "You need all data in the:\n",
-    "    ./data/mhui/images\n",
-    "    ./data/mhui/groundtruth\n",
-    "It will crop the white parts and put the files in\n",
-    "    ./data/mhui/cropped/images\n",
-    "    ./data/mhui/cropped/groundtruth\n",
-    "It will create the patches in:\n",
-    "    ./data/mhui/generate/patches_rotation/images/\n",
-    "    ./data/mhui/generate/patches_rotation/groundtruth/\n",
-    "It will calculate the distances\n",
-    "    ./data/mhui/generate/patches_rotation/distance/\n"
+    "# It generates the dataset for mhui\n",
+    "# You need all data in the:\n",
+    "#     ./data/mhui/images\n",
+    "#     ./data/mhui/groundtruth\n",
+    "# It will crop the white parts and put the files in\n",
+    "#     ./data/mhui/cropped/images\n",
+    "#     ./data/mhui/cropped/groundtruth\n",
+    "# It will create the patches in:\n",
+    "#     ./data/mhui/generate/patches_rotation/images/\n",
+    "#     ./data/mhui/generate/patches_rotation/groundtruth/\n",
+    "# It will calculate the distances\n",
+    "#     ./data/mhui/generate/patches_rotation/distance/\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -55,17 +55,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "Cropp the white spaces"
+    "# Cropp the white spaces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def crop_rows(original_image, original_groundtruth):\n",
@@ -116,6 +120,8 @@
     "    return original_image[:, column_left:column_right], original_groundtruth[:, column_left:column_right]\n",
     "\n",
     "def crop_white_area(path, image_name):\n",
+    "    global index_cropping\n",
+    "\n",
     "    name = image_name.split(\".\")\n",
     "    groundtruth_name = str(name[0]) + \".tif\"\n",
     "    img_org = Image.open(path + \"/images/\" + image_name)\n",
@@ -160,25 +166,41 @@
     "    #save image\n",
     "    image.save(path + \"/cropped/images/\" + image_name)\n",
     "    groundtruth.save(path + \"/cropped/groundtruth/\" + groundtruth_name)\n",
-    "    \n",
+    "    index_cropping += 1\n",
     "    #image.show()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/8 [00:00<?, ?it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "./data/mhui/\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 62%|██████▎   | 5/8 [00:13<00:10,  3.42s/it]"
+     ]
     }
    ],
    "source": [
+    "index_cropping = 0\n",
     "print(CURRENT_DIR)\n",
     "\n",
     "if not os.path.exists(CURRENT_DIR + \"cropped\"):\n",
@@ -189,7 +211,7 @@
     "    os.makedirs(CURRENT_DIR + \"cropped/groundtruth\") \n",
     "\n",
     "original_path = CURRENT_DIR + \"/images/\"\n",
-    "for f in listdir(original_path):\n",
+    "for f in tqdm(listdir(original_path)):\n",
     "    if f.endswith(\".tiff\"):\n",
     "        crop_white_area(CURRENT_DIR, f)"
    ]
@@ -202,13 +224,15 @@
    },
    "outputs": [],
    "source": [
-    "Create patches"
+    "# Create patches"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "patch_size = 200\n",
@@ -284,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "Calculate distances"
+    "# Calculate distances"
    ]
   },
   {
@@ -301,6 +325,8 @@
     "    return np.argmin(dist_2)\n",
     "\n",
     "def save_distances(input_path, output_path, img_name):\n",
+    "    global index_distance\n",
+    "    \n",
     "    img_org = ndimage.imread(input_path+img_name, mode='L')\n",
     "    img_org[img_org < 127] = 0\n",
     "    img_org[img_org >= 127] = 255\n",
@@ -314,23 +340,26 @@
     "        output[tuple(coord)] = (coord[0]-closest_px[0])**2 + (coord[1]-closest_px[1])**2\n",
     "    \n",
     "    misc.imsave(output_path+img_name, output)\n",
+    "    index_distance += 1\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 152,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "\n",
+    "index_distance = 0\n",
     "input_path   = '{}/generate/patches_rotation/groundtruth/'.format(CURRENT_DIR)\n",
     "output_path   = '{}/generate/patches_rotation/distance/'.format(CURRENT_DIR)\n",
     "\n",
     "if not os.path.exists(output_path):\n",
     "    os.makedirs(output_path)\n",
     "    \n",
-    "for f in listdir(input_path):\n",
+    "for f in tqdm(listdir(input_path)):\n",
     "    save_distances(input_path, output_path, f)    "
    ]
   },
