added generating patches notebook

--- a/MhiuDataset.ipynb
+++ b/MhiuDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -121,67 +121,71 @@
     "\n",
     "def crop_white_area(path, image_name):\n",
     "    global index_cropping\n",
+    "    try:\n",
+    "        name = image_name.split(\".\")\n",
+    "        groundtruth_name = str(name[0]) + \".tif\"\n",
+    "        img_org = Image.open(path + \"/images/\" + image_name)\n",
+    "        groundtruth_org = Image.open(path + \"/groundtruth/\" + groundtruth_name)\n",
+    "        groundtruth_org = groundtruth_org.convert('L')\n",
+    "        original_image = np.asarray(img_org)\n",
+    "        original_groundtruth = np.asarray(groundtruth_org)\n",
     "\n",
-    "    name = image_name.split(\".\")\n",
-    "    groundtruth_name = str(name[0]) + \".tif\"\n",
-    "    img_org = Image.open(path + \"/images/\" + image_name)\n",
-    "    groundtruth_org = Image.open(path + \"/groundtruth/\" + groundtruth_name)\n",
-    "    groundtruth_org = groundtruth_org.convert('L')\n",
-    "    original_image = np.asarray(img_org)\n",
-    "    original_groundtruth = np.asarray(groundtruth_org)\n",
-    "    \n",
-    "    max_white_row_top = 0\n",
-    "    for j in range(original_image.shape[1]):\n",
-    "        if np.all(original_image[0][j] == 255):\n",
-    "            max_white_row_top = max_white_row_top + 1\n",
-    "    max_white_row_bottom = 0\n",
-    "    for j in range(original_image.shape[1]):\n",
-    "        if np.all(original_image[original_image.shape[0] - 1][j] == 255):\n",
-    "            max_white_row_bottom = max_white_row_bottom + 1 \n",
-    "    max_row = max(max_white_row_top, max_white_row_bottom)\n",
+    "        max_white_row_top = 0\n",
+    "        for j in range(original_image.shape[1]):\n",
+    "            if np.all(original_image[0][j] == 255):\n",
+    "                max_white_row_top = max_white_row_top + 1\n",
+    "        max_white_row_bottom = 0\n",
+    "        for j in range(original_image.shape[1]):\n",
+    "            if np.all(original_image[original_image.shape[0] - 1][j] == 255):\n",
+    "                max_white_row_bottom = max_white_row_bottom + 1 \n",
+    "        max_row = max(max_white_row_top, max_white_row_bottom)\n",
     "\n",
-    "    max_white_column_left = 0;\n",
-    "    for i in range(original_image.shape[0]):\n",
-    "        if np.all(original_image[i][0] == 255):\n",
-    "            max_white_column_left = max_white_column_left + 1\n",
-    "    max_white_column_right = 0;\n",
-    "    for i in range(original_image.shape[0]):\n",
-    "        if np.all(original_image[i][original_image.shape[1] - 1] == 255):\n",
-    "            max_white_column_right = max_white_column_right + 1\n",
-    "    max_column = max(max_white_column_left, max_white_column_right)\n",
+    "        max_white_column_left = 0;\n",
+    "        for i in range(original_image.shape[0]):\n",
+    "            if np.all(original_image[i][0] == 255):\n",
+    "                max_white_column_left = max_white_column_left + 1\n",
+    "        max_white_column_right = 0;\n",
+    "        for i in range(original_image.shape[0]):\n",
+    "            if np.all(original_image[i][original_image.shape[1] - 1] == 255):\n",
+    "                max_white_column_right = max_white_column_right + 1\n",
+    "        max_column = max(max_white_column_left, max_white_column_right)\n",
     "\n",
     "\n",
-    "    if (max_row >= max_column):\n",
-    "        #print(\"Rows first!\")\n",
-    "        cropped_image_rows, cropped_groundtruth_rows = crop_rows(original_image, original_groundtruth)\n",
-    "        cropped_image, cropped_groundtruth = crop_columns(cropped_image_rows, cropped_groundtruth_rows)\n",
+    "        if (max_row >= max_column):\n",
+    "            #print(\"Rows first!\")\n",
+    "            cropped_image_rows, cropped_groundtruth_rows = crop_rows(original_image, original_groundtruth)\n",
+    "            cropped_image, cropped_groundtruth = crop_columns(cropped_image_rows, cropped_groundtruth_rows)\n",
+    "        else:\n",
+    "            #print(\"Columns first!\")\n",
+    "            cropped_image_columns, cropped_groundtruth_columns = crop_columns(original_image, original_groundtruth)\n",
+    "            cropped_image, cropped_groundtruth = crop_rows(cropped_image_columns, cropped_groundtruth_columns)\n",
+    "\n",
+    "        image = Image.fromarray(cropped_image, 'RGB')\n",
+    "        groundtruth = Image.fromarray(cropped_groundtruth, 'L')\n",
+    "    except:\n",
+    "        pass\n",
     "    else:\n",
-    "        #print(\"Columns first!\")\n",
-    "        cropped_image_columns, cropped_groundtruth_columns = crop_columns(original_image, original_groundtruth)\n",
-    "        cropped_image, cropped_groundtruth = crop_rows(cropped_image_columns, cropped_groundtruth_columns)\n",
-    "\n",
-    "    image = Image.fromarray(cropped_image, 'RGB')\n",
-    "    groundtruth = Image.fromarray(cropped_groundtruth, 'L')\n",
-    "    \n",
-    "    #save image\n",
-    "    image.save(path + \"/cropped/images/\" + image_name)\n",
-    "    groundtruth.save(path + \"/cropped/groundtruth/\" + groundtruth_name)\n",
-    "    index_cropping += 1\n",
-    "    #image.show()\n",
+    "        #save image\n",
+    "        image.save(path + \"/cropped/images/\" + image_name)\n",
+    "        groundtruth.save(path + \"/cropped/groundtruth/\" + groundtruth_name)\n",
+    "        index_cropping += 1\n",
+    "        #image.show()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\r",
-      "  0%|          | 0/8 [00:00<?, ?it/s]"
+      "  0%|          | 0/1109 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -195,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 62%|██████▎   | 5/8 [00:13<00:10,  3.42s/it]"
+      "100%|██████████| 1109/1109 [1:24:06<00:00,  8.93s/it]\n"
      ]
     }
    ],
@@ -204,7 +208,7 @@
     "print(CURRENT_DIR)\n",
     "\n",
     "if not os.path.exists(CURRENT_DIR + \"cropped\"):\n",
-    "    os.makedirs(path + \"cropped\")\n",
+    "    os.makedirs(CURRENT_DIR + \"cropped\")\n",
     "if not os.path.exists(CURRENT_DIR + \"cropped/images\"):\n",
     "    os.makedirs(CURRENT_DIR + \"cropped/images\")\n",
     "if not os.path.exists(CURRENT_DIR + \"cropped/groundtruth\"):\n",
@@ -218,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -229,9 +233,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -249,38 +253,41 @@
     "    \n",
     "    img_org = ndimage.imread(ground_t_path, mode='L')\n",
     "    img_sat = ndimage.imread(image_path)\n",
-    "\n",
-    "    for l, r in [(0,0), (0,200), (200,0), (200,200)]:\n",
-    "        \n",
-    "        patch_org = img_org[l:(l+200), r:(r+200)]\n",
-    "        patch_sat = img_sat[l:(l+200), r:(r+200)]\n",
+    "    shape = img_org.shape\n",
     "    \n",
-    "        org_name = '{}groundtruth/{}_{}.png'.format(output_dir,name[0], str(index).zfill(5))\n",
-    "        sat_name = '{}images/{}_{}.png'.format(output_dir,name[0], str(index).zfill(5))\n",
-    "\n",
-    "        # '''\n",
-    "        rotation  = np.random.randint(0,4)\n",
-    "        patch_org = np.rot90(patch_org, rotation)\n",
-    "        patch_sat = np.rot90(patch_sat, rotation)\n",
-    "        # '''\n",
+    "    for l in range(0, shape[0]-patch_size, patch_size):\n",
+    "        for r in range(0, shape[1]-patch_size, patch_size):\n",
     "        \n",
-    "        #print(org_name)\n",
-    "        if patch_org.shape == (200, 200):\n",
-    "            misc.imsave(org_name, patch_org)\n",
-    "            misc.imsave(sat_name, patch_sat)\n",
-    "        index += 1"
+    "            patch_org = img_org[l:(l+patch_size), r:(r+patch_size)]\n",
+    "            patch_sat = img_sat[l:(l+patch_size), r:(r+patch_size)]\n",
+    "\n",
+    "            org_name = '{}groundtruth/{}_{}.png'.format(output_dir,name[0], str(index).zfill(5))\n",
+    "            sat_name = '{}images/{}_{}.png'.format(output_dir,name[0], str(index).zfill(5))\n",
+    "\n",
+    "            rotation  = np.random.randint(0,4)\n",
+    "            patch_org = np.rot90(patch_org, rotation)\n",
+    "            patch_sat = np.rot90(patch_sat, rotation)\n",
+    "\n",
+    "            #print(org_name)\n",
+    "            if patch_org.shape == (patch_size, patch_size):\n",
+    "                misc.imsave(org_name, patch_org)\n",
+    "                misc.imsave(sat_name, patch_sat)\n",
+    "            index += 1\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:00<00:00, 13.22it/s]\n"
+      "100%|██████████| 1024/1024 [13:56<00:00,  1.22it/s]\n"
      ]
     }
    ],
@@ -296,13 +303,12 @@
     "    os.makedirs(output_dir+'images')\n",
     "\n",
     "for file in tqdm(listdir(images_dir)):\n",
-    "    \n",
     "    generate_images(images_dir, ground_t_dir, file, output_dir, 200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -313,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -346,11 +352,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 53%|█████▎    | 23103/43505 [5:39:59<8:10:40,  1.44s/it]"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-7938267be7bd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0msave_distances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-e8feab6e0c47>\u001b[0m in \u001b[0;36msave_distances\u001b[0;34m(input_path, output_path, img_name)\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mcoord\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnon_road_pxs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m         \u001b[0mclosest_px\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroad_pxs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclosest_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mroad_pxs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m         \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mclosest_px\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcoord\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mclosest_px\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-11-e8feab6e0c47>\u001b[0m in \u001b[0;36mclosest_node\u001b[0;34m(node, nodes)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mnodes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdist_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnodes\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdist_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msave_distances\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimg_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "index_distance = 0\n",
     "input_path   = '{}/generate/patches_rotation/groundtruth/'.format(CURRENT_DIR)\n",
@@ -359,18 +386,9 @@
     "if not os.path.exists(output_path):\n",
     "    os.makedirs(output_path)\n",
     "    \n",
-    "for f in tqdm(listdir(input_path)):\n",
+    "for f in tqdm(listdir(input_path)[1:]):\n",
     "    save_distances(input_path, output_path, f)    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -389,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
