--- a/Image Distances.ipynb
+++ b/Image Distances.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import subprocess # subprocess.call(['./test.sh'])\n",
@@ -50,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for f in listdir(input_path):\n",
@@ -74,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
